# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: hexlet-check.yml  superlinter.yml
brain_game/: cli.py  play_game.py
brain_game/scripts/: brain_even.py
brain_games/: __init__.py  answers.py  cli.py  engine.py  engine_game.py  play_game.py  question_and_answer.py  questions.py
brain_games/games/: __init__.py  calc.py  constants.py  even.py  game.py  gcd.py  play_game.py  prime.py  progression.py  type_games.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_game.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
