[tool.poetry]
name = "hexlet_code"
version = "0.4.0"
description = ""
authors = ["Sergey Golodyaev <gabadysergei@yandex.ru>"]
packages = [
  { include = "brain_games"},
]

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_game:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
